added colour coded hover

--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
     <h1>Pokémon Rock Paper Scissors</h1>
     <p>Choose your Pokémon!</p>
     <div class="choices">
-        <div id="charmander"><img src="img/charmander.png" alt="Charmander"></div>
-        <div id="squirtle"><img src="img/squirtle.png" alt="Squirtle"></div>
-        <div id="bulbasaur"><img src="img/bulbasaur.png" alt="Bulbasaur"></div>
+        <div id="charmander" class="charmander"><img src="img/charmander.png" alt="Charmander"></div>
+        <div id="squirtle" class="squirtle"><img src="img/squirtle.png" alt="Squirtle"></div>
+        <div id="bulbasaur" class="bulbasaur"><img src="img/bulbasaur.png" alt="Bulbasaur"></div>
     </div>
     <div class="scores">
         <p><strong>User Score:</strong> <span id="user-score">0</span></p>
