Changed media to fit on one screen

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>Pokémon Rock Paper Scissors</h1>
-    <p>Choose your Pokémon!</p>
+    <p class="choose">Choose your Pokémon!</p>
     <div class="choices">
         <div id="charmander" class="charmander"><img src="img/charmander.png" alt="Charmander"></div>
         <div id="squirtle" class="squirtle"><img src="img/squirtle.png" alt="Squirtle"></div>
