Updated scoring, changed image sizes, favicon added

--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pokémon Rock Paper Scissors</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="icon" href="/img/pokeball.png" type="image/png">
+
 </head>
 <body>
     <h1>Pokémon Rock Paper Scissors</h1>
