--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pokémon Rock Paper Scissors</title>
+    <title>Pokémon: Elemental Showdown</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="icon" href="/img/pokeball.png" type="image/png">
 
 </head>
 <body>
-    <h1>Pokémon Rock Paper Scissors</h1>
+    <h1>Pokémon: Elemental Showdown</h1>
     <p class="choose">Choose your Pokémon!</p>
     <div class="choices">
         <div id="charmander" class="charmander"><img src="img/charmander.png" alt="Charmander"></div>
